@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.485 2007/02/26 14:07:04 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.486 2007/03/01 11:17:00 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -132,6 +132,10 @@ PH/29 SMTP synchronization checks are implemented when a command is read -
       pipelining has not been advertised.
 
 PH/30 MH's patch to allow iscntrl() characters to be list separators.
+
+PH/31 Unlike :fail:, a custom message specified with :defer: was not being
+      returned in the SMTP response when smtp_return_error_details was false.
+      This has been fixed.
 
 
 Exim version 4.66
